# amazing_42

./: Makefile  README.md  a_maze_ing.py  config.txt  config_validation.py  dimentions.py  maze.py  maze_renderer.py  mazegen.py  mlx-2.2-py3-none-any.whl  pyproject.toml  requirements.txt  structure.txt
mazegen/: mazegen.py
output/: output.txt
